[gd_scene load_steps=5 format=2]

[ext_resource path="res://Conductor.gd" type="Script" id=1]
[ext_resource path="res://sound/neutral_120.wav" type="AudioStream" id=2]
[ext_resource path="res://sound/h√§ppi_120.wav" type="AudioStream" id=3]
[ext_resource path="res://sound/sad_120.wav" type="AudioStream" id=4]

[node name="Conductor" type="Node"]
script = ExtResource( 1 )

[node name="StartTimer" type="Timer" parent="."]

[node name="NeutralTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "Neutral"

[node name="UpbeatTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -80.0
bus = "Upbeat"

[node name="DownbeatTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -80.0
bus = "Downbeat"

[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
